Закрывает тег section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
+      </section>
 
       <section class="appointment">
         <h2 class="appointment-title">Заинтересовались?</h2>
