Добавляет лого к преимуществам

--- a/index.html
+++ b/index.html
@@ -46,32 +46,37 @@
 
     <main class="main-index">
       <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-      <img class="logo" src="#" alt="Описание картинки.">
+      <img class="main-index-logo" src="#" alt="Описание картинки.">
       <h2 class="main-title">Седона — небольшой городок в Аризоне,
         заслуживающий большего! </h2>
         <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
+        <ol class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
+            <img class="sedona-city-image" src="#" alt="Описание картинки.">
             <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
+              <img class="sedona-hotel-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="advantages-item">
+              <img class="sedona-food-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Еда</h3>
               <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages-item">
+              <img class="sedona-souvenir-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Сувениры</h3>
               <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
             <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <img class="sedona-canyon-image" src="#" alt="Описание картинки." >
             <p class="advantages-description">— №2 —</p>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -90,7 +95,7 @@
             <p class="advantages-description">— №5 —</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-        </ul>
+        </ol>
       </section>
 
       <section class="appointment">
