Добавляет изменение разметки

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
   <body>
 
@@ -37,8 +37,8 @@
               </span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
+          <li class="navigation-button">
+            <button class="navigation-button" href="#">Хочу сюда!</button>
           </li>
         </ul>
       </nav>
@@ -58,28 +58,28 @@
             <img class="sedona-city-image" src="#" alt="Описание картинки.">
             <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            </li>
-            <li class="advantages-item">
+          </li>
+          <li class="advantages-item">
               <img class="sedona-hotel-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Жильё</h3>
               <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-            </li>
-            <li class="advantages-item">
+          </li>
+          <li class="advantages-item">
               <img class="sedona-food-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Еда</h3>
               <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-            </li>
-            <li class="advantages-item">
+          </li>
+          <li class="advantages-item">
               <img class="sedona-souvenir-logo" src="#" alt="Описание картинки.">
               <h3 class="advantages-title">Сувениры</h3>
               <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
-            </li>
-            <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <img class="sedona-canyon-image" src="#" alt="Описание картинки." >
-            <p class="advantages-description">— №2 —</p>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
+          <li class="advantages-item">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <img class="sedona-canyon-image" src="#" alt="Описание картинки." >
+              <p class="advantages-description">— №2 —</p>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          /li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="advantages-description">— №3 —</p>
@@ -122,18 +122,18 @@
         <h2 class="visually-hidden">Контакты</h2>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Твиттер</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a class="button" href="#">
+            <a class="button" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Инстаграм</span>
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
