--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <title>Седона</title>
   </head>
   <body>
-
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo" >
           <img class="page-header-logo" alt="логотип города «Седона»" src="">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html" >Главная</a>
+            <a class="navigation-link"  >Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -38,7 +37,7 @@
             </a>
           </li>
           <li class="navigation-button">
-            <button class="navigation-button" href="#">Хочу сюда!</button>
+            <button class="navigation-button" type="submit" >Хочу сюда!</button>
           </li>
         </ul>
       </nav>
@@ -47,17 +46,17 @@
     <main class="main-index">
       <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
       <img class="main-index-logo" src="#" alt="Описание картинки.">
-      <h2 class="main-title">Седона — небольшой городок в Аризоне,
-        заслуживающий большего! </h2>
+      <p class="main-title">Седона — небольшой городок в Аризоне,
+        заслуживающий большего! </p>
         <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ol class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h3 class="advantages-title-white">Настоящий городок</h3>
             <img class="sedona-city-image" src="#" alt="Описание картинки.">
-            <p class="advantages-description">— №1 —</p>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <p class="advantages-description-white-number">— №1 —</p>
+            <p class="advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="advantages-item">
               <img class="sedona-hotel-logo" src="#" alt="Описание картинки.">
@@ -75,24 +74,24 @@
               <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
           <li class="advantages-item">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <h3 class="advantages-title-white">Там есть мост дьявола</h3>
               <img class="sedona-canyon-image" src="#" alt="Описание картинки." >
-              <p class="advantages-description">— №2 —</p>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <p class="advantages-description-white-number">— №2 —</p>
+              <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           /li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">— №3 —</p>
+            <p class="advantages-description-number">— №3 —</p>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">— №4 —</p>
+            <p class="advantages-description-number">— №4 —</p>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">— №5 —</p>
+            <p class="advantages-description-number">— №5 —</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
@@ -101,7 +100,7 @@
       <section class="appointment">
         <h2 class="appointment-title">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button" type="submit">Поиск Гостиницы в Седоне</button>
+        <a class="catalog-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
       </section>
     </main>
 
@@ -112,9 +111,7 @@
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="newsletter-email">Email</label>
           <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">
-            <span class="visually-hidden">Подписаться</span>
-          </button>
+          <button class="button newsletter-button" type="submit">Подписаться</button>
         </form>
       </section>
 
