--- a/catalog.html
+++ b/catalog.html
@@ -6,56 +6,56 @@
   </head>
   <body>
     <header class="page-header">
-        <nav class="navigation">
-            <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" alt="логотип города «Седона»" src="">
+      <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="логотип города «Седона»" src="">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html" >Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" >Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
             </a>
-          <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link" href="index.html" >Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" >Гостиницы</a>
-            </li>
-          </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
                   Корзина
-                </span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <button class="navigation-button" type="submit" >Хочу сюда!</button>
-            </li>
-          </ul>
-        </nav>
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <button class="navigation-button" type="submit" >Хочу сюда!</button>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="main-inner">
         <header class="inner-header">
-            <h1 class="inner-header-title">Гостиницы Седоны</h1>
-            <ul class="breadcrumbs">
-              <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link" href="index.html">
-                  <span class="visually-hidden">Главная</span>
-                </a>
-              </li>
-              <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link">Гостиницы</a>
-              </li>
-            </ul>
+          <h1 class="inner-header-title">Гостиницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html">
+                <span class="visually-hidden">Главная</span>
+              </a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Гостиницы</a>
+            </li>
+          </ul>
         </header>
 
         <section class="catalog-filter">
@@ -73,110 +73,119 @@
                   <label class="control">
                     <input class="control-input" type="checkbox" name="parking" checked>Парковка
                   </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="wi-fi">Wi-Fi
-                    </label>
-                  </li>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="checkbox" name="wi-fi">Wi-Fi
+                  </label>
+                </li>
               </ul>
             </fieldset>
       
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="Hotel" checked>Гостиница
-                      </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="Motel">Мотель
-                    </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="radio" name="product-group" value="Apartments">Апартаменты
-                      </label>
-                  </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group" value="Hotel" checked>Гостиница
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group" value="Motel">Мотель
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="control-input" type="radio" name="product-group" value="Apartments">Апартаменты
+                  </label>
+                </li>
               </ul>
             </fieldset>
-            <button class="button-apply" type="submit"><b>Применить</b></button>
-            <button class="button-reset" type="submit">Сбросить</button>
+            <button class="button-apply" type="submit">Применить</button>
+            <button class="button-reset" type="reset">Сбросить</button>
           </form>
         </section>
 
         <section class="catalog-product"> 
           <h2 class="offers-found"> Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
-                <option value="cheap">Сначала дешёвое</option>
+              <option value="cheap">Сначала дешёвое</option>
+              <option value="expensive">Сначала дорогое</option>
             </select>
-              <a class="button" href="#">
+              <button class="button" >
                 <span class="visually-hidden">Показать карточки</span>
-              </a>
-              <a href="#" class="button button-light">
+              </button>
+              <button class="button button-light">
                 <span class="visually-hidden">Показать ленту</span>
-              </a>
-              <a href="#" class="button button-light">
+              </button>
+              <button class="button button-light">
                 <span class="visually-hidden">Показать список</span>
-              </a>
+              </button>
+
               <ul class="product-list">
                 <li class="product-card">
-                    <a class="product-card-link" href="product.html">
-                      <img class="product-card-image" src="" alt="Описание картинки">
-                      <h3 class="product-card-title">Amara Resort & Spa</h3>
-                    </a>
-                    <p class="Hotel">Гостиница
-                        <b class="product-card-price">От 4000 ₽</b>
-                    </p>
-                    <a class="product-card-button button" href="#">подробнее</a>
-                    <button class="product-card-button button" href="#" >в избранное</button >
-                    <p class="visually-hidden">4 звезды
-                        <b class="rating">Рейтинг: 8,5</b>
-                    </p>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="" alt="Описание картинки">
+                    <h3 class="product-card-title">Amara Resort & Spa</h3>
+                  </a>
+                  <p class="hotel">Гостиница
+                    <b class="product-card-price">От 4000 ₽</b>
+                  </p>
+                  <a class="product-card-more button" href="#">подробнее</a>
+                  <button class="product-card-button button">в избранное</button >
+                  <p class="rating">
+                    <span class="visually-hidden">4 звезды</span>
+                    <b class="rating-number">Рейтинг: 8,5</b>
+                  </p>
                 </li>
+
                 <li class="product-card">
-                    <a class="product-card-link" href="product.html">
-                      <img class="product-card-image" src="" alt="Описание картинки">
-                      <h3 class="product-card-title">Villas at Poco Diablo</h3>
-                    </a>
-                    <p class="Hotel">Гостиница
-                        <b class="product-card-price">От 5000 ₽</b>
-                    </p>
-                    <a class="product-card-button button" href="#">подробнее</a>
-                    <button class="product-card-button button" href="#" checked>в избранное</button >
-                    <p class="visually-hidden">4 звезды
-                        <b class="rating">Рейтинг: 9,2</b>
-                    </p>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="" alt="Описание картинки">
+                    <h3 class="product-card-title">Villas at Poco Diablo</h3>
+                  </a>
+                  <p class="hotel">Гостиница
+                    <b class="product-card-price">От 5000 ₽</b>
+                  </p>
+                  <a class="product-card-more button" href="#">подробнее</a>
+                  <button class="product-card-button button" checked>в избранное</button >
+                  <p class="rating">
+                    <span class="visually-hidden">4 звезды</span>
+                    <b class="rating-number">Рейтинг: 9,2</b>
+                  </p>
                 </li>
+
                 <li class="product-card">
-                    <a class="product-card-link" href="product.html">
-                      <img class="product-card-image" src="" alt="Описание картинки">
-                      <h3 class="product-card-title">Desert Quail Inn</h3>
-                    </a>
-                    <p class="Hotel">Гостиница
-                        <b class="product-card-price">От 2500 ₽</b>
-                    </p>
-                    <a class="product-card-button button" href="#">подробнее</a>
-                    <button class="product-card-button button" href="#" >в избранное</button >
-                    <p class="visually-hidden">3 звезды
-                        <b class="rating">Рейтинг: 6,9</b>
-                    </p>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="" alt="Описание картинки">
+                    <h3 class="product-card-title">Desert Quail Inn</h3>
+                  </a>
+                  <p class="hotel">Гостиница
+                    <b class="product-card-price">От 2500 ₽</b>
+                  </p>
+                  <a class="product-card-more button" href="#">подробнее</a>
+                  <button class="product-card-button button">в избранное</button >
+                  <p class="rating">
+                    <span class="visually-hidden">3 звезды</span>
+                    <b class="rating-number">Рейтинг: 6,9</b>
+                  </p>
                 </li>
+
                 <li class="product-card">
-                    <a class="product-card-link" href="product.html">
-                      <img class="product-card-image" src="" alt="Описание картинки">
-                      <h3 class="product-card-title">GreenTree Inn</h3>
-                    </a>
-                    <p class="Hotel">Гостиница
-                        <b class="product-card-price">От 1500 ₽</b>
-                    </p>
-                    <a class="product-card-button button" href="#">подробнее</a>
-                    <button class="product-card-button button" href="#" >в избранное</button >
-                    <p class="visually-hidden">2 звезды
-                        <b class="rating">Рейтинг: 5,0</b>   
-                    </p>
+                  <a class="product-card-link" href="product.html">
+                    <img class="product-card-image" src="" alt="Описание картинки">
+                    <h3 class="product-card-title">GreenTree Inn</h3>
+                  </a>
+                  <p class="hotel">Гостиница
+                    <b class="product-card-price">От 1500 ₽</b>
+                  </p>
+                  <a class="product-card-more button" href="#">подробнее</a>
+                  <button class="product-card-button button">в избранное</button >
+                  <p class="rating">
+                    <span class="visually-hidden">2 звезды</span>
+                    <b class="rating-number">Рейтинг: 5,0</b>
+                  </p>
                 </li>
 
               </ul>
@@ -200,11 +209,11 @@
                   <a class="pagination-link" href="#">10</a>
                 </li> 
               </ul>
-              <div class="number-offers">
-                <p>Гостиниц на странице: 
-                  <d class="number-offers">4</d>
-                </p>
-              </div>
+            <p class="number-offers">Гостиниц на странице:
+              <select class="number-offers">
+                <option value="four-pic">4</option>
+              </select>
+            </p>
         </section>
     </main>
 
