Исправляет ошибки классов

--- a/catalog.html
+++ b/catalog.html
@@ -115,13 +115,13 @@
         <option value="cheap">Сначала дешёвое</option>
         <option value="expensive">Сначала дорогое</option>
       </select>
-      <button class="button">
+      <button class="button button-light" type="button">
         <span class="visually-hidden">Показать карточки</span>
       </button>
-      <button class="button button-light">
+      <button class="button button-light" type="button">
         <span class="visually-hidden">Показать ленту</span>
       </button>
-      <button class="button button-light">
+      <button class="button button-light" type="button">
         <span class="visually-hidden">Показать список</span>
       </button>
 
@@ -134,8 +134,8 @@
           <p class="hotel">Гостиница
             <b class="product-card-price">От 4000 ₽</b>
           </p>
-          <a class="product-card-more button" href="#">подробнее</a>
-          <button class="product-card-button button">в избранное</button>
+          <a class="button product-card-more " href="#">подробнее</a>
+          <button class="button product-card-button">в избранное</button>
           <p class="rating">
             <span class="visually-hidden">4 звезды</span>
             <b class="rating-number">Рейтинг: 8,5</b>
@@ -150,8 +150,8 @@
           <p class="hotel">Гостиница
             <b class="product-card-price">От 5000 ₽</b>
           </p>
-          <a class="product-card-more button" href="#">подробнее</a>
-          <button class="product-card-button button" checked>в избранное</button>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button" type="button" checked>в избранное</button>
           <p class="rating">
             <span class="visually-hidden">4 звезды</span>
             <b class="rating-number">Рейтинг: 9,2</b>
@@ -166,8 +166,8 @@
           <p class="hotel">Гостиница
             <b class="product-card-price">От 2500 ₽</b>
           </p>
-          <a class="product-card-more button" href="#">подробнее</a>
-          <button class="product-card-button button">в избранное</button>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button" type="button">в избранное</button>
           <p class="rating">
             <span class="visually-hidden">3 звезды</span>
             <b class="rating-number">Рейтинг: 6,9</b>
@@ -182,8 +182,8 @@
           <p class="hotel">Гостиница
             <b class="product-card-price">От 1500 ₽</b>
           </p>
-          <a class="product-card-more button" href="#">подробнее</a>
-          <button class="product-card-button button">в избранное</button>
+          <a class="button product-card-more" href="#">подробнее</a>
+          <button class="button product-card-button" type="button">в избранное</button>
           <p class="rating">
             <span class="visually-hidden">2 звезды</span>
             <b class="rating-number">Рейтинг: 5,0</b>
