--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li class="navigation-button">
-          <button class="navigation-button" type="submit">Хочу сюда!</button>
+          <button class="navigation-button" type="button">Хочу сюда!</button>
         </li>
       </ul>
     </nav>
@@ -111,7 +111,9 @@
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
       <p class="page-footer-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-        <label for="newsletter-email">Email</label>
+        <label for="newsletter-email">
+          <span class="visually-hidden">Email</span> 
+        </label>
         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
           required>
         <button class="button newsletter-button" type="submit">Подписаться</button>
