--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo">
-        <img class="page-header-logo" alt="логотип города «Седона»" src="">
+        <img class="page-header-logo" alt="логотип города «Седона»" src="images/header/logo-header.svg" width="139" height="70">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -26,6 +26,7 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img src="images/header/search.svg" width="19" height="19" alt="поиск">
             <span class="visually-hidden">
               Поиск
             </span>
@@ -33,6 +34,7 @@
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img src="images/header/favorite.svg" width="19" height="17" alt="корзина">
             <span class="visually-hidden">
               Корзина
             </span>
@@ -47,7 +49,9 @@
 
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-    <img class="main-index-logo" src="#" alt="Описание картинки.">
+    <img class="main-index-logo" src="images/main/index-background.jpg" width="1200" height="485" alt="каньон">
+    <img src="images/main/welcome-logo.png" width="458" height="352" alt="добро пожаловать в город седона ">
+    <img src="images/main/main-mask.png" width="1200" height=""
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
