--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
     <img class="main-index-logo" src="images/main/index-background.jpg" width="1200" height="485" alt="каньон">
     <img src="images/main/welcome-logo.png" width="458" height="352" alt="добро пожаловать в город седона ">
-    <img src="images/main/main-mask.png" width="1200" height=""
+    <img src="images/main/main-mask.png" width="1200" height="57">
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -60,31 +60,31 @@
       <ol class="advantages-list">
         <li class="advantages-item">
           <h3 class="advantages-title-white">Настоящий городок</h3>
-          <img class="sedona-city-image" src="#" alt="Описание картинки.">
           <p class="advantages-description-white-number">— №1 —</p>
           <p class="advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img class="sedona-city-image" src="images/main/real-town.jpg" width="800" height="384" alt="город седона">
         </li>
         <li class="advantages-item">
-          <img class="sedona-hotel-logo" src="#" alt="Описание картинки.">
+          <img class="sedona-hotel-logo" src="images/main/Vector-house.svg" width="76" height="73" alt="логотиа домика.">
           <h3 class="advantages-title">Жильё</h3>
           <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-food-logo" src="#" alt="Описание картинки.">
+          <img class="sedona-food-logo" src="images/main/food.svg" width="75" height="71" alt="логотип закусочной.">
           <h3 class="advantages-title">Еда</h3>
           <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-souvenir-logo" src="#" alt="Описание картинки.">
+          <img class="sedona-souvenir-logo" src="images/main/Souvenirs.svg" width="76" height="73" alt="логотип сувениров">
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
         <li class="advantages-item">
+          <img class="sedona-canyon-image" src="images/main/devils-bridge.jpg" width="800" height="384" alt="каньон седона">
           <h3 class="advantages-title-white">Там есть мост дьявола</h3>
-          <img class="sedona-canyon-image" src="#" alt="Описание картинки.">
           <p class="advantages-description-white-number">— №2 —</p>
           <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          /li>
+        </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
           <p class="advantages-description-number">— №3 —</p>
@@ -112,6 +112,7 @@
 
   <footer class="page-footer">
     <section class="newsletter">
+      <img src="images/footer/background-subscribe.jpg" width="1200" height="411" alt="">
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
       <p class="page-footer-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -129,16 +130,19 @@
       <ul class="footer-social-list">
         <li class="footer-social-item">
           <a class="button" href="https://vk.com/htmlacademy">
+            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="страница в вконтакте">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="footer-social-item">
+          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="страница в телеграм">
           <a class="button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="ютуб канал">
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
