--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img class="sedona-city-image" src="images/main/real-town.jpg" width="800" height="384" alt="город седона">
         </li>
         <li class="advantages-item">
-          <img class="sedona-hotel-logo" src="images/main/Vector-house.svg" width="76" height="73" alt="логотиа домика.">
+          <img class="sedona-hotel-logo" src="images/main/vector-house.svg" width="76" height="73" alt="логотиа домика.">
           <h3 class="advantages-title">Жильё</h3>
           <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
@@ -75,7 +75,7 @@
           <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-souvenir-logo" src="images/main/Souvenirs.svg" width="76" height="73" alt="логотип сувениров">
+          <img class="sedona-souvenir-logo" src="images/main/souvenirs.svg" width="76" height="73" alt="логотип сувениров">
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
