Удаляет лишние img

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-    <img class="main-index-logo" src="images/main/index-background.jpg" width="1200" height="485" alt="каньон">
-    <img src="images/main/welcome-logo.png" width="458" height="352" alt="добро пожаловать в город седона ">
-    <img src="images/main/main-mask.png" width="1200" height="57">
+    <img class="main-index-logo" src="" width="1200" height="485" alt="">
+    <img src="images/main/welcome-logo.png" width="458" height="352" alt="welcome to the gorgeus sedona because the grand canyon sucks!">
+    <img src="" width="1200" height="57" alt="">
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
     <p class="main-description"> Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -62,25 +62,25 @@
           <h3 class="advantages-title-white">Настоящий городок</h3>
           <p class="advantages-description-white-number">— №1 —</p>
           <p class="advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img class="sedona-city-image" src="images/main/real-town.jpg" width="800" height="384" alt="город седона">
+          <img class="sedona-city-image" src="" width="800" height="384" alt="город седона">
         </li>
         <li class="advantages-item">
-          <img class="sedona-hotel-logo" src="images/main/vector-house.svg" width="76" height="73" alt="логотиа домика.">
+          <img class="sedona-hotel-logo" src="" width="76" height="73" alt="логотип домика.">
           <h3 class="advantages-title">Жильё</h3>
           <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-food-logo" src="images/main/food.svg" width="75" height="71" alt="логотип закусочной.">
+          <img class="sedona-food-logo" src="" width="75" height="71" alt="логотип закусочной.">
           <h3 class="advantages-title">Еда</h3>
           <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-souvenir-logo" src="images/main/souvenirs.svg" width="76" height="73" alt="логотип сувениров">
+          <img class="sedona-souvenir-logo" src="" width="76" height="73" alt="логотип сувениров">
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
         <li class="advantages-item">
-          <img class="sedona-canyon-image" src="images/main/devils-bridge.jpg" width="800" height="384" alt="каньон седона">
+          <img class="sedona-canyon-image" src="" width="800" height="384" alt="каньон седона">
           <h3 class="advantages-title-white">Там есть мост дьявола</h3>
           <p class="advantages-description-white-number">— №2 —</p>
           <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -112,7 +112,7 @@
 
   <footer class="page-footer">
     <section class="newsletter">
-      <img src="images/footer/background-subscribe.jpg" width="1200" height="411" alt="">
+      <img src="" width="1200" height="411" alt="">
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
       <p class="page-footer-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
