--- a/catalog.html
+++ b/catalog.html
@@ -53,7 +53,7 @@
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
-            <img src="images/filter-content/union-home.svg" width="13" height="13" alt="главная">
+            <img src="images/filter-content/union-home.svg" width="13" height="13" alt="ссылка на главную страницу">
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
@@ -71,13 +71,13 @@
           <ul class="catalog-filter-list">
             <li class="catalog-filter-item">
               <label class="control">
-                <img src="images/filter-content/vector-catalog-galo4ka.svg" width="12" height="8" alt="">
+                <img src="" width="12" height="8" alt="">
                 <input class="control-input" type="checkbox" name="Swimming-pool" checked>Бассейн
               </label>
             </li>
             <li class="catalog-filter-item">
               <label class="control">
-                <img src="images/filter-content/vector-catalog-galo4ka.svg" width="12" height="8" alt="">
+                <img src="" width="12" height="8" alt="">
                 <input class="control-input" type="checkbox" name="parking" checked>Парковка
               </label>
             </li>
@@ -119,25 +119,25 @@
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешёвое</option>
         <option value="expensive">Сначала дорогое</option>
-        <img src="images/filter-content/vector-galo4ka.svg" width="13" height="10" alt="">
+        <img src="" width="13" height="10" alt="">
       </select>
       <button class="button button-light" type="button">
-        <img src="images/filter-content/icon-table.svg" width="16" height="14" alt="">
+        <img src="images/filter-content/icon-table.svg" width="16" height="14" alt="Показать карточки">
         <span class="visually-hidden">Показать карточки</span>
       </button>
       <button class="button button-light" type="button">
-        <img src="images/filter-content/icon-slideshow.svg" width="16" height="14" alt="">
+        <img src="images/filter-content/icon-slideshow.svg" width="16" height="14" alt="Показать ленту">
         <span class="visually-hidden">Показать ленту</span>
       </button>
       <button class="button button-light" type="button">
-        <img src="images/filter-content/icon-list.svg" width="16" height="14" alt="">
+        <img src="images/filter-content/icon-list.svg" width="16" height="14" alt="Показать список">
         <span class="visually-hidden">Показать список</span>
       </button>
 
       <ul class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="вид на звезды">
+            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="гостиница вид на звезды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotel">Гостиница
@@ -157,7 +157,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="вид на скалы с юга">
+            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="гостиница вид на скалы с юга">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotel">Гостиница
@@ -177,7 +177,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="вид на скалы с севера">
+            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="гостиница вид на скалы с севера">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel">Гостиница
@@ -196,7 +196,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="вид на скалы с востока">
+            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="гостиница вид на скалы с востока">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <p class="hotel">Гостиница
@@ -235,7 +235,7 @@
       </ul>
       <p class="number-offers">Гостиниц на странице:
         <select class="number-offers">
-          <img src="images/filter-content/vector-galo4ka.svg" width="13" height="10" alt="">
+          <img src="" width="13" height="10" alt="">
           <option value="four-pic">4</option>
         </select>
       </p>
@@ -245,7 +245,7 @@
 
   <footer class="page-footer">
     <section class="newsletter">
-      <img src="images/footer/background-subscribe.jpg" width="1200" height="411" alt="">
+      <img src="" width="1200" height="411" alt="">
       <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
       <p class="page-footer-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
