Исправляет alt текст

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo">
-        <img class="page-header-logo" alt="логотип города «Седона»" src="images/header/logo-header.svg" width="139" height="70">
+        <img class="page-header-logo" alt="Логотип города «Седона»" src="images/header/logo-header.svg" width="139" height="70">
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -26,7 +26,7 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/search.svg" width="19" height="19" alt="поиск">
+            <img src="images/header/search.svg" width="19" height="19" alt="Поиск">
             <span class="visually-hidden">
               Поиск
             </span>
@@ -34,7 +34,7 @@
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/favorite.svg" width="19" height="17" alt="корзина">
+            <img src="images/header/favorite.svg" width="19" height="17" alt="Корзина">
             <span class="visually-hidden">
               Корзина
             </span>
@@ -50,7 +50,7 @@
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
     
-    <img src="images/main/welcome-logo.png" width="458" height="352" alt="welcome to the gorgeus sedona because the grand canyon sucks!">
+    <img src="images/main/welcome-logo.png" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
     
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
@@ -130,19 +130,19 @@
       <ul class="footer-social-list">
         <li class="footer-social-item">
           <a class="button" href="https://vk.com/htmlacademy">
-            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="страница в вконтакте">
+            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="Страница в вконтакте">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="footer-social-item">
-          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="страница в телеграм">
+          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="Страница в телеграм">
           <a class="button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="ютуб канал">
+            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="Ютуб канал">
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
