--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <nav class="navigation">
       <a class="navigation-logo" href="index.html">
-        <img class="page-header-logo" alt="логотип города «Седона»" src="images/header/logo-header.svg" width="139" height="70" >
+        <img class="page-header-logo" alt="Логотип города «Седона»" src="images/header/logo-header.svg" width="139" height="70" >
       </a>
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -26,7 +26,7 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/search.svg" width="19" height="19" alt="поиск">
+            <img src="images/header/search.svg" width="19" height="19" alt="Поиск">
             <span class="visually-hidden">
               Поиск
             </span>
@@ -34,7 +34,7 @@
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/favorite.svg" width="19" height="17" alt="корзина">
+            <img src="images/header/favorite.svg" width="19" height="17" alt="Корзина">
             <span class="visually-hidden">
               Корзина
             </span>
@@ -53,7 +53,7 @@
       <ul class="breadcrumbs">
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link" href="index.html">
-            <img src="images/filter-content/union-home.svg" width="13" height="13" alt="ссылка на главную страницу">
+            <img src="images/filter-content/union-home.svg" width="13" height="13" alt="Ссылка на главную страницу">
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
@@ -71,13 +71,13 @@
           <ul class="catalog-filter-list">
             <li class="catalog-filter-item">
               <label class="control">
-                <img src="" width="12" height="8" alt="">
+                
                 <input class="control-input" type="checkbox" name="Swimming-pool" checked>Бассейн
               </label>
             </li>
             <li class="catalog-filter-item">
               <label class="control">
-                <img src="" width="12" height="8" alt="">
+                
                 <input class="control-input" type="checkbox" name="parking" checked>Парковка
               </label>
             </li>
@@ -137,7 +137,7 @@
       <ul class="product-list">
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="гостиница вид на звезды">
+            <img class="product-card-image" src="images/hotel/hotel-1-1.jpg" width="300" height="211" alt="Гостиница вид на звезды">
             <h3 class="product-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotel">Гостиница
@@ -157,7 +157,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="гостиница вид на скалы с юга">
+            <img class="product-card-image" src="images/hotel/hotel-1-2.jpg" width="300" height="211" alt="Гостиница вид на скалы с юга">
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotel">Гостиница
@@ -177,7 +177,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="#">
-            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="гостиница вид на скалы с севера">
+            <img class="product-card-image" src="images/hotel/hotel-1-3.jpg" width="300" height="211" alt="Гостиница вид на скалы с севера">
             <h3 class="product-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel">Гостиница
@@ -196,7 +196,7 @@
 
         <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="гостиница вид на скалы с востока">
+            <img class="product-card-image" src="images/hotel/hotel-1-4.jpg" width="300" height="211" alt="Гостиница вид на скалы с востока">
             <h3 class="product-card-title">GreenTree Inn</h3>
           </a>
           <p class="hotel">Гостиница
@@ -263,19 +263,19 @@
       <ul class="footer-social-list">
         <li class="footer-social-item">
           <a class="button" href="https://vk.com/htmlacademy">
-            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="страница в вконтакте">
+            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="Страница в вконтакте">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="footer-social-item">
-          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="страница в телеграм">
+          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="Страница в телеграм">
           <a class="button" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
         <li class="footer-social-item">
           <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="ютуб канал">
+            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="Ютуб канал">
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
