Добавляет HTML Academy.svg

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -26,7 +27,6 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/search.svg" width="19" height="19" alt="Поиск">
             <span class="visually-hidden">
               Поиск
             </span>
@@ -34,7 +34,6 @@
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
-            <img src="images/header/favorite.svg" width="19" height="17" alt="Корзина">
             <span class="visually-hidden">
               Корзина
             </span>
@@ -281,7 +280,10 @@
         </li>
       </ul>
       <p><a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a></p>
-      <p><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
+      <p>
+        <img src="images/footer/HTML Academy.svg" alt="Ссылка на страницу HTML Academy">
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+      </p>
     </section>
   </footer>
 </body>
