Удаляет лишние отступы

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-    <div clacc="main-bg-img">
-      <p class="main-mask">
+    <div clacc="main-background">
+      <p class="main-logo">
         <img src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
       </p>
     </div>
@@ -148,7 +148,7 @@
       </ul>
       <p><a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a></p>
       <p>
-        <img src="images/footer/HTML Academy.svg" alt="Ссылка на страницу HTML Academy">
+        <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy">
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
       </p>
     </section>
