--- a/catalog.html
+++ b/catalog.html
@@ -152,7 +152,7 @@
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="rating-number">Рейтинг: 8,5</b>
+            <b class="button rating-number">Рейтинг: 8,5</b>
           </p>
         </li>
 
@@ -172,7 +172,7 @@
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">4 звезды</span>
-            <b class="rating-number">Рейтинг: 9,2</b>
+            <b class="button rating-number">Рейтинг: 9,2</b>
           </p>
         </li>
 
@@ -191,7 +191,7 @@
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">3 звезды</span>
-            <b class="rating-number">Рейтинг: 6,9</b>
+            <b class="button rating-number">Рейтинг: 6,9</b>
           </p>
         </li>
 
@@ -209,7 +209,7 @@
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <img src="images/hotel/vector-star.svg" width="18" height="17" alt="">
             <span class="visually-hidden">2 звезды</span>
-            <b class="rating-number">Рейтинг: 5,0</b>
+            <b class="button rating-number">Рейтинг: 5,0</b>
           </p>
         </li>
 
