--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
   <main class="main-index">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
     <div clacc="main-background">
-      <p class="main-logo">
-        <img src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
-      </p>
+      <img class="main-logo" src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
     </div>
     <p class="main-title">Седона — небольшой городок в Аризоне,
       заслуживающий большего! </p>
@@ -65,7 +63,7 @@
           <p class="advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           
         </li>
-        <li class="advantages-item-rgba">
+        <li class="rgba advantages-item">
           <h3 class="advantages-title">Жильё</h3>
           <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </li>
@@ -74,7 +72,7 @@
           <h3 class="advantages-title">Еда</h3>
           <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="advantages-item-rgba">
+        <li class="rgba advantages-item">
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
@@ -84,17 +82,17 @@
           <p class="advantages-description-white-number">— №2 —</p>
           <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </li>
-        <li class="advantages-item-rgba">
+        <li class="rgba advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
           <p class="advantages-description-number">— №3 —</p>
           <p class="advantages-description">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="advantages-item-rgba2">
+        <li class="rgba2 advantages-item">
           <h3 class="advantages-title">Красивая дорога</h3>
           <p class="advantages-description-number">— №4 —</p>
           <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="advantages-item-rgba">
+        <li class="rgba advantages-item">
           <h3 class="advantages-title">Мало туристов</h3>
           <p class="advantages-description-number">— №5 —</p>
           <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
