--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
     </nav>
   </header>
 
-  <main class="main-index">
+  <main class="main-container main-index">
+  <div class="page-container">
     <h1 class="visually-hidden">Небольшой городок «Седона»</h1>
-    <div clacc="main-background">
+    <div class="main-background">
       <img class="main-logo" src="images/main/welcome-logo.svg" width="458" height="352" alt="Welcome to the gorgeus sedona «because the Grand Canyon sucks!»">
     </div>
     <p class="main-title">Седона — небольшой городок в Аризоне,
@@ -105,6 +106,7 @@
       <p class="appointment-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="button catalog-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
     </section>
+  </div>
   </main>
 
   <footer class="page-footer">
