Исправляет разметку index html

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
       <h2 class="visually-hidden">Преимущества</h2>
 
       <ol class="advantages-list">
-        <li class="white-advantages-item sedona-img">
-          <h3 class="white-advantages-title">Настоящий городок</h3>
-          <p class="white-advantages-description-number">— №1 —</p>
-          <p class="white-advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+          <h3 class="advantages-title advantages-title-white">Настоящий городок</h3>
+          <p class="advantages-description-number advantages-description-white">— №1 —</p>
+          <p class="advantages-description advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <div class="advantages-item-img"></div>
         </li>
         <li class="rgba advantages-item">
           <h3 class="advantages-title">Жильё</h3>
@@ -76,11 +77,11 @@
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
-        <li class="white-advantages-item">
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
           <img src="images/main/devils-bridge.jpg" width="800" height="382" alt="Каньон «Седона»">
-          <h3 class="white-advantages-title">Там есть мост дьявола</h3>
-          <p class="white-advantages-description-number">— №2 —</p>
-          <p class="white-advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <h3 class="advantages-title advantages-title-white">Там есть мост дьявола</h3>
+          <p class="advantages-description-number advantages-description-white">— №2 —</p>
+          <p class="advantages-description advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </li>
         <li class="rgba advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
