:heavy_check_mark: Сборка #4

--- a/4/index.html
+++ b/4/index.html
@@ -26,14 +26,14 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
+        <li class="navigation-item search">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item">
+        <li class="navigation-item basket">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Корзина
@@ -60,10 +60,11 @@
       <h2 class="visually-hidden">Преимущества</h2>
 
       <ol class="advantages-list">
-        <li class="white-advantages-item sedona-img">
-          <h3 class="white-advantages-title">Настоящий городок</h3>
-          <p class="white-advantages-description-number">— №1 —</p>
-          <p class="white-advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+          <h3 class="advantages-title advantages-title-white">Настоящий городок</h3>
+          <p class="advantages-description-number advantages-description-white">— №1 —</p>
+          <p class="advantages-description advantages-description-white">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <div class="advantages-item-img"></div>
         </li>
         <li class="rgba advantages-item">
           <h3 class="advantages-title">Жильё</h3>
@@ -77,11 +78,11 @@
           <h3 class="advantages-title">Сувениры</h3>
           <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
         </li>
-        <li class="white-advantages-item">
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
           <img src="images/main/devils-bridge.jpg" width="800" height="382" alt="Каньон «Седона»">
-          <h3 class="white-advantages-title">Там есть мост дьявола</h3>
-          <p class="white-advantages-description-number">— №2 —</p>
-          <p class="white-advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <h3 class="advantages-title advantages-title-white">Там есть мост дьявола</h3>
+          <p class="advantages-description-number advantages-description-white">— №2 —</p>
+          <p class="advantages-description advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </li>
         <li class="rgba advantages-item">
           <h3 class="advantages-title">Небольшая площадь</h3>
@@ -127,21 +128,18 @@
     <section class="footer-social">
       <h2 class="visually-hidden">Контакты</h2>
       <ul class="footer-social-list">
-        <li class="footer-social-item">
+        <li class="footer-social-vk">
           <a class="contacts" href="https://vk.com/htmlacademy">
-            <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="Страница в вконтакте">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
-        <li class="footer-social-item">
-          <img src="images/footer/social-telegram.svg" width="18" height="17" alt="Страница в телеграм">
+        <li class="footer-social-tg">
           <a class="contacts" href="https://t.me/htmlacademy">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
-        <li class="footer-social-item">
+        <li class="footer-social-yt">
           <a class="contacts" href="https://www.youtube.com/user/htmlacademyru">
-            <img src="images/footer/social-youtube.svg" width="22" height="17" alt="Ютуб канал">
             <span class="visually-hidden">Ютуб</span>
           </a>
         </li>
@@ -156,7 +154,7 @@
 
     <section class="footer-htmlacademy-link">
       <p class="htmlacademy-link">
-        <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy">
+        <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy.">
         <a href="https://htmlacademy.ru/">.html academy</a>
       </p> 
     </section>
