--- a/4/catalog.html
+++ b/4/catalog.html
@@ -26,14 +26,14 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
+        <li class="navigation-item search">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item">
+        <li class="navigation-item basket">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Корзина
@@ -267,21 +267,18 @@
       <section class="footer-social">
         <h2 class="visually-hidden">Контакты</h2>
         <ul class="footer-social-list">
-          <li class="footer-social-item">
+          <li class="footer-social-vk">
             <a class="contacts" href="https://vk.com/htmlacademy">
-              <img src="images/footer/social-vkontakte.svg" width="24" height="15" alt="Страница в вконтакте">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
-          <li class="footer-social-item">
-            <img src="images/footer/social-telegram.svg" width="18" height="17" alt="Страница в телеграм">
+          <li class="footer-social-tg">
             <a class="contacts" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="footer-social-item">
+          <li class="footer-social-yt">
             <a class="contacts" href="https://www.youtube.com/user/htmlacademyru">
-              <img src="images/footer/social-youtube.svg" width="22" height="17" alt="Ютуб канал">
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
@@ -296,7 +293,7 @@
   
       <section class="footer-htmlacademy-link">
         <p class="htmlacademy-link">
-          <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy">
+          <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy.">
           <a href="https://htmlacademy.ru/">.html academy</a>
         </p> 
       </section>
