Исправляет недочеты 5го модуля

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         </li>
       </ul>
       <ul class="navigation-list navigation-user">
-        <li class="navigation-item search">
+        <li class="navigation-item navigation-item-search">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Поиск
             </span>
           </a>
         </li>
-        <li class="navigation-item basket">
+        <li class="navigation-item navigation-item-basket">
           <a class="navigation-link" href="#">
             <span class="visually-hidden">
               Корзина
@@ -145,18 +145,20 @@
       </ul>
     </section>
 
-    <section class="footer-contacts-address">
+    <div class="footer-contacts-address">
       <p class="footer-contacts-address-phone">
         <a href="tel:+78128121212">+7 (812) 812-12-12</a>
       </p>
-    </section>
+    </div>
 
-    <section class="footer-htmlacademy-link">
+    <div class="footer-htmlacademy-link">
       <p class="htmlacademy-link">
+        <a href="https://htmlacademy.ru/">
         <img src="images/footer/html-academy.svg" alt="Ссылка на страницу HTML Academy.">
-        <a href="https://htmlacademy.ru/">.html academy</a>
+        <span class="visually-hidden">.html academy</span>
+        </a>
       </p> 
-    </section>
+    </div>
     </div>
   </footer>
 
