Добавляет микро сетки для каталога

--- a/catalog.html
+++ b/catalog.html
@@ -57,6 +57,9 @@
             <span class="visually-hidden">Главная</span>
           </a>
         </li>
+        <!-- <li class="breadcrumbs-item">
+          <span class="breadcrumbs-arrow"></span>
+        </li> -->
         <li class="breadcrumbs-item">
           <a class="breadcrumbs-link">Гостиницы</a>
         </li>
@@ -266,17 +269,17 @@
       <section class="footer-social">
         <h2 class="visually-hidden">Контакты</h2>
         <ul class="footer-social-list">
-          <li class="footer-social-vk">
+          <li class="footer-social-item footer-social-vk">
             <a class="contacts" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
-          <li class="footer-social-tg">
+          <li class="footer-social-item footer-social-tg">
             <a class="contacts" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
           </li>
-          <li class="footer-social-yt">
+          <li class="footer-social-item footer-social-yt">
             <a class="contacts" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Ютуб</span>
             </a>
