Исправляет .appointment-button

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="appointment">
       <h2 class="appointment-title">Заинтересовались?</h2>
       <p class="appointment-description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button catalog-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
+      <a class="button appointment-button" href="catalog.html">Поиск Гостиницы в Седоне</a>
     </section>
   </div>
   </main>
