Добавляет сетку товаров на гридах

--- a/catalog.html
+++ b/catalog.html
@@ -118,7 +118,7 @@
     </div>
 
     <section class="catalog-product">
-    <div class="catalog-search catalog-filter">
+    <div class="catalog-search">
       <h2 class="offers-found"> Найдено гостиниц: 38</h2>
       <select class="select-control" aria-label="Сортировка">
         <option value="cheap">Сначала дешёвое</option>
