:heavy_check_mark: Сборка #6

--- a/6/index.html
+++ b/6/index.html
@@ -59,7 +59,7 @@
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
       <ol class="advantages-list">
-        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue advantages-item-grid-box-sedona">
         <div class="advantages-list-white-block">
           <h3 class="advantages-title advantages-title-white">Настоящий <br> городок</h3>
           <p class="advantages-description-number advantages-description-white">— №1 —</p>
@@ -86,7 +86,7 @@
           <p class="advantages-description advantages-description-with-picture">Не только китайского, <br> но и настоящего местного <br> производства!</p>
         </li>
 
-        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue">
+        <li class="advantages-item advantages-item-white advantages-item-bgcolor-blue advantages-item-grid-box-bridge">
           <img src="images/main/devils-bridge.jpg" width="800" height="384" alt="Каньон «Седона»">
           <div class="advantages-list-white-block">
           <h3 class="advantages-title advantages-title-white">Там есть <br> мост дьявола</h3>
@@ -106,7 +106,7 @@
           <p class="advantages-description-number">— №4 —</p>
           <p class="advantages-description advantages-description-without-picture">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
         </li>
-        
+      
         <li class="rgba advantages-item">
           <h3 class="advantages-title advantages-title-without-picture">Мало <br> туристов</h3>
           <p class="advantages-description-number">— №5 —</p>
